[package]
name = "vorago-reb1"
version = "0.4.0"
authors = ["Robin Mueller <robin.mueller.m@gmail.com>"]
edition = "2021"
description = "Board Support Crate for the Vorago REB1 development board"
homepage = "https://egit.irs.uni-stuttgart.de/rust/vorago-reb1"
repository = "https://egit.irs.uni-stuttgart.de/rust/vorago-reb1"
license = "Apache-2.0"
keywords = ["no-std", "reb1", "cortex-m", "vorago", "va108xx"]
categories = ["aerospace", "embedded", "no-std", "hardware-support"]

[dependencies]
cortex-m = "0.7.5"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.7"
dummy-pin = "0.1.1"
max116xx-10bit = "0.2.1"

[dependencies.va108xx-hal]
version = "0.5.1"
features = ["rt"]

[features]
rt = ["va108xx-hal/rt"]

[dev-dependencies]
cortex-m-rtic = "1.1.2"
panic-halt = "0.2"
nb = "1.0.0"

[dev-dependencies.rtt-target]
version = "0.3"
features = ["cortex-m"]

[dev-dependencies.panic-rtt-target]
version = "0.1"
features = ["cortex-m"]
